--- a/inspect.ipynb
+++ b/inspect.ipynb
@@ -2166,6 +2166,199 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_encoder = LabelEncoder()\n",
+    "label_binarizer = LabelBinarizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = pd.read_csv('data/train_ensemble_1.csv')\n",
+    "X = train.loc[:, train.columns != 'Id']\n",
+    "n_cols = len(X.columns)\n",
+    "y = train['Id']\n",
+    "\n",
+    "# Label encoder y one hot. Necessary for keras models\n",
+    "y_label = label_encoder.fit_transform(y)\n",
+    "y_one_hot = label_binarizer.fit_transform(y_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import euclidean_distances"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/sklearn/utils/validation.py:395: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and will raise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "euc_dist = euclidean_distances(X, X.iloc[0,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0]), array([0]))"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# euc_dist[euc_dist == euc_dist.min()]\n",
+    "np.where(euc_dist == euc_dist.min())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12.77837426])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "euc_dist[9039]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'w_9d704ab'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['new_whale', 'w_9d704ab', 'w_9d704ab', 'w_9d704ab']\n",
+      "new_whale w_9d704ab w_9d704ab w_9d704ab\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.5/dist-packages/sklearn/utils/validation.py:395: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and will raise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "  DeprecationWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pred = X.iloc[0,:]\n",
+    "euc_dist = euclidean_distances(X, pred)\n",
+    "most_proba = list()\n",
+    "maxi_1 = min(euc_dist)\n",
+    "maxi_1_value = np.where(euc_dist == maxi_1)[0]\n",
+    "most_proba.append(y[int(maxi_1_value[0])])\n",
+    "siguientes_2 = euc_dist[np.where(euc_dist != maxi_1)[0]]\n",
+    "\n",
+    "maxi_2 = min(siguientes_2)\n",
+    "maxi_2_value = np.where(euc_dist == maxi_2)[0]\n",
+    "most_proba.append(y[int(maxi_2_value[0])])\n",
+    "siguientes_3 = siguientes_2[np.where(siguientes_2 != maxi_2)[0]]\n",
+    "\n",
+    "maxi_3 = min(siguientes_3)\n",
+    "maxi_3_value = np.where(euc_dist == maxi_3)[0]\n",
+    "most_proba.append(y[int(maxi_3_value[0])])\n",
+    "siguientes_4 = siguientes_3[np.where(siguientes_3 != maxi_3)[0]]\n",
+    "\n",
+    "# maxi_4 = min(siguientes_4)\n",
+    "# maxi_4_value = np.where(euc_dist == maxi_4)[0]\n",
+    "# most_proba.append(y[int(maxi_4_value[0])])\n",
+    "\n",
+    "most_proba = np.array(most_proba)\n",
+    "most_proba = ['new_whale'] + most_proba.tolist()\n",
+    "\n",
+    "print(most_proba)\n",
+    "predicted_tags = \" \".join(most_proba)\n",
+    "print(predicted_tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.96867356,  0.96867356, ..., 16.5515881 ,\n",
+       "       16.5515881 , 16.55171293])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "euc_dist[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
